--- a/Back/Back.csproj
+++ b/Back/Back.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.0">
       <PrivateAssets>all</PrivateAssets>
@@ -22,6 +23,11 @@
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+    <Folder Include="Core\Application\Features\CQRS\Commands\" />
+    <Folder Include="Core\Application\Features\CQRS\Handlers\" />
+    <Folder Include="Core\Application\Features\CQRS\Queries\" />
+    <Folder Include="Core\Application\Dto\" />
+    <Folder Include="Infrastructure\" />
     <Folder Include="Persistance\Migrations\" />
   </ItemGroup>
 
